# decip

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
tests/: cli.rs
