[package]
name = "decip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = { version = "0.2" }
mimalloc = { version = "*" }
libc = { version = "*" }

[dev-dependencies]
assert_cmd = { version = "2.0.14" }
predicates = { version = "3.1.0" }

[profile.release]
lto = true
strip = true
